docs/2.0/index.md
---
---
# Tabris.js - 2.0 Beta 2

## Introduction

Tabris.js is a mobile framework that lets you develop native iOS and Android apps from a single code base written entirely in JavaScript. Tabris.js is a good choice when you are looking for native performance and look & feel while leveraging your JavaScript know-how. Tabris.js has been crafted with web APIs and extensibility on our minds. You can use existing JavaScript libraries and native extensions to extend the core functionality.

## Getting Started

- [Quick Start Guide](getting-started.md) - Create your first Tabris.js App
- [Getting Started Ebook](https://tabrisjs.com/downloads/ebook/tabrisjs-2.0.0-beta1.pdf) - Create, deploy and test your first Tabris.js app (a detailed tutorial)
- [The Tabris.js Developer App](developer-app.md) - Get the most out of our developer app

## Documentation

- [Module System](modules.md) - How to organize and load scripts.
- [Widget Basics](widget-basics.md) - Native widget handling.
- [UI Model](ui.md) - Pages, Actions and Drawer.
- [Using Selectors](selector.md) - Working more efficiently with widgets.
- [Layouts](layout.md) - Layouting widgets.
- [Touch Events](touch.md) - Processing widget gesture/touch events.
- [W3C Compatibility](w3c-api.md) - XMLHttpRequest, LocalStorage and timer.
- [Cordova Support](cordova.md) - Using Cordova plug-ins, including Dialogs, File and Camera.
- [Build your app](build.md) - Create a standalone app from your Tabris.js project files.
- [Local Build](local-build.md) - Build your Tabris.js app locally.
- [Patch your app](patch.md) - Hotfix critical issues without waiting for app store submission.

## API Reference

- [AlertDialog](api/AlertDialog.md)
- [app](api/app.md)
- [CanvasContext](api/CanvasContext.md)
- [device](api/device.md)
- [InactivityTimer](api/InactivityTimer.md)
- [NativeObject](api/NativeObject.md)
- [NavigationBar](api/NavigationBar.md)
- [StatusBar](api/StatusBar.md)
- [window](api/window.md)
- [ui](api/ui.md)
- [WidgetCollection](api/WidgetCollection.md)
- [Property Types](types.md)

### Widgets

- [Action](api/Action.md)
- [ActivityIndicator](api/ActivityIndicator.md)
- [Button](api/Button.md)
- [Canvas](api/Canvas.md)
- [Cell](api/Cell.md)
- [CheckBox](api/CheckBox.md)
- [CollectionView](api/CollectionView.md)
- [Composite](api/Composite.md)
- [Drawer](api/Drawer.md)
- [ImageView](api/ImageView.md)
- [NavigationView](api/NavigationView.md)
- [Page](api/Page.md)
- [Picker](api/Picker.md)
- [ProgressBar](api/ProgressBar.md)
- [RadioButton](api/RadioButton.md)
- [ScrollView](api/ScrollView.md)
- [SearchAction](api/SearchAction.md)
- [Slider](api/Slider.md)
- [Switch](api/Switch.md)
- [Tab](api/Tab.md)
- [TabFolder](api/TabFolder.md)
- [TextInput](api/TextInput.md)
- [TextView](api/TextView.md)
- [ToggleButton](api/ToggleButton.md)
- [Video](api/Video.md)
- [WebView](api/WebView.md)
- [Widget](api/Widget.md)

## Articles

- [Apache Cordova vs. Tabris.js](http://eclipsesource.com/blogs/2015/03/02/apache-cordova-vs-tabris-js/) - How to use Cordova's build tooling to create Tabris.js apps.
- [Debugging Tabris.js](debug.md) - How to debug a Tabris.js app
- [Layouting in Tabris.js](http://eclipsesource.com/blogs/2015/02/19/layouting-in-tabris-js/) - Layouting explained.
- [CollectionView: Display Data Sets in Tabris.js](http://eclipsesource.com/blogs/2015/02/16/collectionview-display-data-sets-in-tabris-js/) - The power of the CollectionView in detail.

### Tabris.js Examples

This blog post series takes a closer look at the examples.

- [Hello World!](http://eclipsesource.com/blogs/2015/02/20/tabris-js-examples-hello-world/)
- [User Input](http://eclipsesource.com/blogs/2015/02/25/tabris-js-examples-user-input/)
- [Local Storage](http://eclipsesource.com/blogs/2015/03/04/tabris-js-examples-local-storage/)
- [Images](http://eclipsesource.com/blogs/2015/03/10/tabris-js-examples-images/)
- [Parallax Scrolling](http://eclipsesource.com/blogs/2015/03/24/tabris-js-examples-parallax-scrolling/)
- [Animations](http://eclipsesource.com/blogs/2015/04/14/tabris-js-examples-animations/)
- [Drawing on the Canvas](http://eclipsesource.com/blogs/2015/04/15/tabris-js-examples-drawing-on-the-canvas/)
- [Network Access](http://eclipsesource.com/blogs/2015/04/24/tabris-js-examples-network-access/)

## Custom Widget Documentation (provisional)

- [Custom Widgets](custom-widgets.md) - JavaScript implementation
- [Custom Widgets - Android](custom-widgets-android.md) - Android implementation
